tests/negative/gold/no_lambda_consumer_test.gold
tests/negative/no_lambda_consumer_test.toit:11:10: error: Empty lambdas are not allowed
      run::
         ^~
tests/negative/no_lambda_consumer_test.toit:12:5: error: Missing ':' for 'if' condition
    4
    ^
tests/negative/no_lambda_consumer_test.toit:14:3: error: Argument mismatch for 'run'
Too many arguments provided
  run
  ^~~
tests/negative/no_lambda_consumer_test.toit:11:7: error: Condition can't be 'none'
      run::
      ^~~
tests/negative/no_lambda_consumer_test.toit:19:7: error: Condition can't be 'none'
      run:
      ^~~
Compilation failed.
